2000-05-21  Mo DeJong  <mdejong@redhat.com>

	* unix/Makefile.in: Changed target
	name from dists to dist to conform
	to GNU specs.

2000-05-14  Mo DeJong  <mdejong@redhat.com>

	* unix/configure.in: Moved minimum
	version number back to 8.3 instead
	of 8.3.1 because of a bug in Tcl's
	package command.

2000-05-14  Mo DeJong  <mdejong@redhat.com>

	* unix/Makefile.in: Fixed up "make test"
	rules, added output that makes it easy
	to run the tests from "make shell".

2000-05-14  Mo DeJong  <mdejong@redhat.com>

	* src/tclblend/tcl/lang/Interp.java: Fixed
	up comments about flags argument, for instance
	GLOBAL_ONLY was changed to TCL.GLOBAL_ONLY.

2000-05-14  Mo DeJong  <mdejong@redhat.com>

	* src/jacl/tcl/lang/Shell.java: Added calls
	to preserve() and release() on cmd object being
	passed to recordAndEval() to avoid a null
	pointer exception.

2000-05-14  Mo DeJong  <mdejong@redhat.com>

	* src/pkgIndex.tcl:
	* src/tcljava/tcl/lang/BlendExtension.java:
	Moved the exporting of commands in the java
	namespace from pkgIndex.tcl to BlendExtension.java
	so that it will work in both Jacl and Tcl Blend.

2000-05-14  Mo DeJong  <mdejong@redhat.com>

	* docs/TclJavaLib/Eval.htm:
	* src/jacl/tcl/lang/BgErrorMgr.java:
	* src/jacl/tcl/lang/Interp.java:
	* src/jacl/tcl/lang/Parser.java:
	* src/tcljava/tcl/lang/TCL.java:
	* src/tests/jacl/tcl/lang/TestEval2Cmd.java:
	* src/tests/jacl/tcl/lang/TestEvalObjvCmd.java:
	Moved eval() flags like TCL_EVAL_GLOBAL
	from the Jacl Parser class to the tcljava
	TCL class. This makes it possible to write
	code that calls eval() with flags arguments
	that works in both Jacl and Tcl Blend. Also
	removed an unused variable from Jacl's Interp.

2000-05-14  Mo DeJong  <mdejong@redhat.com>

	* src/jacl/tcl/lang/Interp.java: Removed
	unused primaryThread variable.

2000-05-14  Mo DeJong  <mdejong@redhat.com>

	* src/jacl/tcl/lang/ConsoleEvent.java: Removed
	class as it is no longer needed after changes to Shell.